020_retirement/grade.txt
Grading at 09/06/2022:03:24:14.255297
For commit ID 863cb1e1afd96948e5e976879da8db58bd5e572c
Grading at Mon Sep  5 11:24:13 PM EDT 2022
Attempting to compile retirement.c
Checking for struct _retire_info
Found on line 4, column 1 
Checking for field int months
Found on line 5, column 3 
Checking for field double contribution
Found on line 6, column 3 
Checking for field double rate_of_return
Found on line 7, column 3 
Checking for typedef of struct _retire_info to retire_info
Found on line 9, column 1 
Checking for void retirement (int startAge, double initial,  retire_info working,  retire_info retired)
Found on line 22, column 1 
Checking for int main(void)
Found on line 32, column 1 
Trying to run retirement calculator..
Your file matched the expected output
Removing your main() and replacing it with our own to run more tests...
temp2.c: In function ‘_old_removed_main_’:
temp2.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
   36 | }
      | ^
cc1: all warnings being treated as errors
Could not replace your main function to test further

Overall Grade: C
